<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

       <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:padding="@dimen/margin_16dp"
           android:layout_marginStart="@dimen/margin_start"
           android:layout_marginEnd="@dimen/margin_end"
           tools:context=".ui.LoginActivity">

           <ImageView
               android:id="@+id/bankImageView"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="@dimen/margin_32dp"
               android:background="@mipmap/ic_logo"
               android:contentDescription="@string/loginBank"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintStart_toStartOf="parent"/>



           <com.google.android.material.textfield.TextInputLayout
               style="@style/LoginTextInputLayoutStyle"
               android:id="@+id/userTextInputLayout"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="@dimen/margin_180dp"
               app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/bankImageView">

               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/userEditText"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/loginUser"
                   android:inputType="text"/>
           </com.google.android.material.textfield.TextInputLayout>

           <com.google.android.material.textfield.TextInputLayout
               style="@style/LoginTextInputLayoutStyle"
               android:id="@+id/passwordTextInputLayout"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="8dp"
               app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/userTextInputLayout">

               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/passwordEditText"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/loginPassword"
                   android:inputType="textPassword"/>
           </com.google.android.material.textfield.TextInputLayout>

           <Button
               android:id="@+id/passwordButton"
               android:layout_width="@dimen/margin_200dp"
               android:layout_height="@dimen/margin_50dp"
               android:text="@string/loginText"
               android:background="@drawable/corner_drawable"
               android:textColor="@color/colorPrimary"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               android:layout_marginBottom="@dimen/margin_48dp"
               app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>