<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

        <variable
            name="viewmodel"
            type="com.trantordev.androidbankapp.viewmodel.StatementViewModel" />

    </data>

<androidx.constraintlayout.widget.ConstraintLayout
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ui.StatementFragment">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:id="@+id/statementLayout"
    android:layout_height="wrap_content"
    android:background="@color/colorSecundary"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_end"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/clientNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:text="Teste Teste Teste"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/textsize_25sp"
            android:accessibilityHeading="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageButton
            android:id="@+id/logoutImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/logout"
            android:layout_marginTop="@dimen/margin_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/accountLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_32dp"
            android:text="@string/bankStatementAccount"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/textsize_12sp"
            android:accessibilityHeading="true"
            app:layout_constraintTop_toBottomOf="@+id/clientNameTextView"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/accountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            android:text="4774 / 01.123456-7"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/textsize_25sp"
            android:accessibilityHeading="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accountLabel"/>

        <TextView
            android:id="@+id/balanceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:text="@string/bankStatementBalance"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/textsize_12sp"
            android:accessibilityHeading="true"
            app:layout_constraintTop_toBottomOf="@+id/accountTextView"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/balanceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            android:paddingBottom="@dimen/margin_16dp"
            android:text="R$ 6.533,44"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/textsize_25sp"
            android:accessibilityHeading="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/balanceLabel"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/statementListLayout"
    android:layout_width="match_parent"
    android:layout_height="@dimen/margin_0dp"
    android:layout_marginStart="@dimen/margin_start"
    android:layout_marginEnd="@dimen/margin_end"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/statementLayout"
    app:layout_constraintBottom_toBottomOf="parent">

    <TextView
        android:id="@+id/recentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:text="@string/bankStatementRecent"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_17sp"
        android:accessibilityHeading="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/statement_list"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_0dp"
        android:layout_marginTop="@dimen/margin_8dp"
        app:layout_constraintTop_toBottomOf="@+id/recentLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:spanCount="1"
        tools:context=".ui.StatementActivity"
        tools:listitem="@layout/statement_item"/>


</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>